# Apex-Arena

./: .dockerignore  .env.example  .env.railway.example  .env.vercel.example  .gitignore  COPYRIGHT  NOTICE  README.md  docker-compose.yml  railway.toml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  ingestor.py  main.py  runtime.py
backend/app/api/: __init__.py  proxy.py  room_routes.py  room_schemas.py  room_streaming.py  routes.py  schemas.py  streaming.py
backend/app/cli/: __init__.py  backfill_completed_rooms.py  backfill_openf1.py  build_race_rooms.py  completed_room_backfill_status.py  database_status.py  (+2 more)
backend/migrations/: env.py  script.py.mako
backend/scripts/: backfill_2026_completed.sh  build_2026_rooms_and_chats.sh
backend/tests/: conftest.py  test_circuit_intelligence.py  test_completed_room_backfill_cli.py  test_day4_historical.py  test_deployment_automation.py  test_development_fixture.py  test_event_bus.py  test_event_pipeline.py  test_historical.py  test_jolpica.py  test_live_catalog.py  test_normalization.py  test_openf1.py  test_openf1_backfill.py  test_process_roles.py  test_proxy_context.py  test_race_room_discussion.py  test_race_rooms_service.py  test_race_state.py  test_raw_events.py  test_recent_session_reconciliation.py  test_room_chat_generation_accounting.py  test_room_cleanup.py  test_room_eligibility.py  test_room_message_uniqueness.py  test_room_replay.py  test_room_routes.py  test_room_schemas.py  test_room_streaming.py  test_routes.py  test_settings.py  test_streaming.py
(+137 files in other folders)
