[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-arena-backend"
version = "0.1.0"
description = "Live-data foundation for the Apex Arena Formula racing fan simulation."
readme = { text = "Apex Arena FastAPI live-data and race-engine backend.", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [{ name = "Chaitanya Singh" }]
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "paho-mqtt>=2.1,<3",
  "pydantic-settings>=2.10,<3",
  "redis>=6.2,<7",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "respx>=0.22,<1",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
